human-intervention-logs/org.mockito:mockito-core:5.0.0/gradle-test/gradle-test-2026-05-04T22-54-35-812744Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.mockito:mockito-core:5.0.0
Command: `/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-2a1f0e6b/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 2 incompatible and 22 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava
/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-2a1f0e6b/tests/src/org.mockito/mockito-core/5.0.0/src/test/java/org_mockito/mockito_core/StackTraceCheckerTest.java:28: error: detectedSubclassConstructor has private access in CheckedBase
        assertThat(checkedSubclass.detectedSubclassConstructor).isTrue();
                                  ^
/home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-2a1f0e6b/tests/src/org.mockito/mockito-core/5.0.0/src/test/java/org_mockito/mockito_core/InlineDelegateByteBuddyMockMakerInnerInlineConstructionMockContextTest.java:29: error: method containsExactly in class AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> cannot be applied to given types;
                                assertThat(context.arguments()).containsExactly("created", 7);
                                                               ^
  required: CAP#1[]
  found:    String,int
  reason: varargs mismatch; String cannot be converted to CAP#1
  where SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT are type-variables:
    SELF extends AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> declared in class AbstractIterableAssert
    ACTUAL extends Iterable<? extends ELEMENT> declared in class AbstractIterableAssert
    ELEMENT extends Object declared in class AbstractIterableAssert
    ELEMENT_ASSERT extends AbstractAssert<ELEMENT_ASSERT,ELEMENT> declared in class AbstractIterableAssert
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
2 errors

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-2a1f0e6b/tests/src/org.mockito/mockito-core/5.0.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-2a1f0e6b/tests/src/org.mockito/mockito-core/5.0.0/src/test/java/org_mockito/mockito_core/InlineDelegateByteBuddyMockMakerInnerInlineConstructionMockContextTest.java:29: error: method containsExactly in class AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> cannot be applied to given types;
                                  assertThat(context.arguments()).containsExactly("created", 7);
                                                                 ^
    required: CAP#1[]
    found:    String,int
    reason: varargs mismatch; String cannot be converted to CAP#1
    where SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT are type-variables:
      SELF extends AbstractIterableAssert<SELF,ACTUAL,ELEMENT,ELEMENT_ASSERT> declared in class AbstractIterableAssert
      ACTUAL extends Iterable<? extends ELEMENT> declared in class AbstractIterableAssert
      ELEMENT extends Object declared in class AbstractIterableAssert
      ELEMENT_ASSERT extends AbstractAssert<ELEMENT_ASSERT,ELEMENT> declared in class AbstractIterableAssert
    where CAP#1 is a fresh type-variable:
      CAP#1 extends Object from capture of ?
  /home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-2a1f0e6b/tests/src/org.mockito/mockito-core/5.0.0/src/test/java/org_mockito/mockito_core/StackTraceCheckerTest.java:28: error: detectedSubclassConstructor has private access in CheckedBase
          assertThat(checkedSubclass.detectedSubclassConstructor).isTrue();
                                    ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date

BUILD FAILED in 26s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/mihailo/git/reachability-copy/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/3997-2a1f0e6b/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.mockito:mockito-core:5.0.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 32s
9 actionable tasks: 1 executed, 8 up-to-date
